# Customer_segmentation_project

./: README.md  app.py  dashboard.py  main.py  pyproject.toml  requirements.txt
Notebook/: customer_segmentation.ipynb
models/: churn_model.pkl  feature_list.pkl  label_encoders.pkl
